--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test='shoppingList'>Laptop</li>
+		<li data-ns-test='shoppingList'>Clothing</li>
+		<li data-ns-test='shoppingList'>Snekers</li>
+	</ol>
+	<ul>
+		<li data-ns-test='holidayList'>Tarapith</li>
+		<li data-ns-test='holidayList'>Goa</li>
+		<li data-ns-test='holidayList'>Kashmir</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
